src/style.css
:root {
    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
    line-height: 1.5;
    font-weight: 400;
}

body {
    margin: 0;
    display: flex;
    flex-direction: column;
    width: 100vw;
    height: 100vh;
    overflow-x: hidden;

    background-color: #2b2d37;
    color: #ebebeb;
}

#header {
    width: 100%;
    text-align: center;
}

#content {
    margin-left: 10%;
    margin-right: 10%;
}

a:link {
    color: #2a7cff;
}

a:visited {
    color: #3cff00;
}

.project {
    display: flex;
    background-color: #222528;
    box-shadow: 0 0 5px 1px #00000034;
    max-width: 800px;
    min-height: 80px;
    padding: 5px;
    margin: 15px;
    border-radius: 5px;
}

.project-img {
    height: 70px;
    width: 70px;
    margin: 10px;
}

#badges {
    border-top: solid 1px #b3b3b3;
    justify-content: center;
    display: flex;
}

#badges a {
    line-height: 0px;
}

#badges img {
    margin: 4px;
}

